# SaferForRAG

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TARGET.md  docker-compose.yml  fastapi.service.example  package-lock.json  package.json  project.toml  pyproject.toml  requirements.txt
app/: lifecycle.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: anonymize.py  check_input.py  check_output.py  deanonymize.py  health.py  scan.py  utils.py
app/config/: global_config.yaml  lm-config.yaml
app/logger/: config.py  handlers.py  manager.py  middleware.py  models.py
app/models/: __init__.py  security.py
app/policy/: Check_Policy.py  Detection_Policy.py  Transformation_Operator.py  Transformation_Policy.py
app/policy/detection/: __init__.py  catalog.py  compiler.py  converter.py  paddle_adapter.py  plan.py  policy.py
app/recognizer/: China_Id_card_recognizer.py
app/services/: Guardian.py  Sanitizer.py  ServiceError.py  container.py  main.py  main_service.py  paddle.py  presidio.py
example/: llmguard.py  paddle.py
tests/: api_test.js
