[project]
name = "security-processer"
version = "0.1.0"
description = "A simple Presidio, llm-guard and PaddleNLP based sanitization service."
requires-python = ">=3.10,<3.11"
authors = [
  { name = "Moookyie" }
]
dependencies = [
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.14.0",
  "attrs==26.1.0",
  "bc-detect-secrets==1.5.43",
  "blis==1.3.3",
  "catalogue==2.0.10",
  "certifi==2026.6.17",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "click==8.4.2",
  "cloudpathlib==0.24.0",
  "colorama==0.4.6",
  "confection==1.3.3",
  "cryptography==44.0.3",
  "cymem==2.0.13",
  "detect-installer==0.1.0",
  "dnspython==2.8.0",
  "email-validator==2.3.0",
  "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63",
  "exceptiongroup==1.3.1",
  "Faker==37.12.0",
  "fastapi==0.139.0",
  "fastapi-cli==0.0.28",
  "fastapi-cloud-cli==0.22.1",
  "fastar==0.11.0",
  "filelock==3.29.4",
  "fsspec==2026.6.0",
  "fuzzysearch==0.8.1",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.8.0",
  "httpx==0.28.1",
  "huggingface_hub==0.36.2",
  "idna==3.18",
  "Jinja2==3.1.6",
  "joblib==1.5.3",
  "json_repair==0.44.1",
  "llm-guard==0.3.16",
  "markdown-it-py==4.2.0",
  "MarkupSafe==3.0.3",
  "mdurl==0.1.2",
  "mpmath==1.3.0",
  "murmurhash==1.0.15",
  "networkx==3.4.2",
  "nltk==3.9.4",
  "numpy==2.2.6",
  "packaging==26.0",
  "phonenumbers==8.13.55",
  "preshed==3.0.13",
  "presidio_analyzer==2.2.358",
  "presidio_anonymizer==2.2.358",
  "pycparser==3.0",
  "pydantic==2.13.4",
  "pydantic-extra-types==2.11.1",
  "pydantic-settings==2.14.2",
  "pydantic_core==2.46.4",
  "Pygments==2.20.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "PyYAML==6.0.3",
  "regex==2024.11.6",
  "requests==2.34.2",
  "requests-file==3.0.1",
  "rich==15.0.0",
  "rich-toolkit==0.20.1",
  "rignore==0.7.6",
  "safetensors==0.8.0",
  "sentry-sdk==2.64.0",
  "shellingham==1.5.4",
  "smart_open==7.6.1",
  "spacy==3.8.14",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "spacy_pkuseg==1.0.1",
  "srsly==2.5.3",
  "starlette==1.3.1",
  "structlog==26.1.0",
  "sympy==1.14.0",
  "thinc==8.3.13",
  "tiktoken==0.13.0",
  "tldextract==5.3.1",
  "tokenizers==0.21.4",
  "tomli==2.4.1",
  "torch==2.12.1",
  "tqdm==4.68.3",
  "transformers==4.51.3",
  "typer==0.26.7",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2026.2",
  "unidiff==0.7.5",
  "urllib3==2.7.0",
  "uvicorn==0.50.0",
  "wasabi==1.1.3",
  "watchfiles==1.2.0",
  "weasel==1.0.0",
  "websockets==16.0",
  "wrapt==2.2.2",
  "zh_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_lg-3.8.0/zh_core_web_lg-3.8.0-py3-none-any.whl#sha256=eb39f5deb382752d3faef4052fb61570b7f45441076082b2a1fdbe50a8848e7c",
  "zh_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.8.0/zh_core_web_sm-3.8.0-py3-none-any.whl#sha256=7de3bd267176b9b2a8defb6997c1cd296da16c57b5e712f72ea44a51755421c8"
]

[project.urls]
Repository = "https://github.com/Mooookey/SaferForRAG"
